Update lens addon branch and repo name

--- a/.gitmodules
+++ b/.gitmodules
@@ -251,8 +251,8 @@
 	url = https://github.com/FreeCAD/FreeCAD-documentation
 [submodule "Ondsel-Lens"]
 	path = Ondsel-Lens
-	url = https://github.com/ondsel-Development/ondsel-lens
-	branch=master
+	url = https://github.com/ondsel-Development/Ondsel-Lens-Addon
+	branch=main
 [submodule "OpticsWorkbench"]
 	path = OpticsWorkbench
 	url = https://github.com/chbergmann/OpticsWorkbench
